@@ -5,14 +5,7 @@ apply plugin: TestingModelBasePlugin
 
 // At top level of build.gradle
 def currentOs = org.gradle.internal.os.OperatingSystem.current()
-def currentArch = System.getProperty("os.arch")
-def osName = org.gradle.internal.os.OperatingSystem.current()
-def platform = org.gradle.internal.os.OperatingSystem.current().isMacOsX() ? 'mac-aarch64' :
-               org.gradle.internal.os.OperatingSystem.current().isLinux() ? 'linux' : 'win'
-def isLinux = org.gradle.internal.os.OperatingSystem.current().isLinux()
-def isMac = currentOs.isMacOsX()
 def isWindows = currentOs.isWindows()
-def javafxVersion = '21.0.1'
 
 /*
     2025/08/15 Marco Mai
@@ -62,10 +55,6 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.7'  // can remove this now I think?
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'io.javaslang:javaslang:2.0.5'
-    implementation "org.openjfx:javafx-base:${javafxVersion}:${platform}"
-    implementation "org.openjfx:javafx-controls:${javafxVersion}:${platform}"
-    implementation "org.openjfx:javafx-graphics:${javafxVersion}:${platform}"
-    implementation "org.openjfx:javafx-fxml:${javafxVersion}:${platform}"
     implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
     implementation 'net.java.dev.jna:jna:5.13.0'
     implementation 'org.fxmisc.richtext:richtextfx:0.10.4'
@@ -80,18 +69,6 @@ test {
 compileJava {
     //options.compilerArgs << '-Xlint' << '-Werror'
     options.compilerArgs << '-Xlint'
-
-    if (platform == 'linux') {
-        options.compilerArgs += [
-            '--module-path', '/usr/share/openjfx/lib',
-            '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    } else {
-        options.compilerArgs += [
-            '--module-path', configurations.runtimeClasspath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    }
 }
 
 jar {
@@ -127,8 +104,8 @@ sourceSets {
 
 applicationDefaultJvmArgs = ['-server', '-Djna.library.path=./build/libs/backend/shared/', '-Xss1000m']
 
-sourceCompatibility = 1.17
-targetCompatibility = 1.17
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 
 model {
@@ -246,33 +223,6 @@ run.doFirst {
     // Having this hardcoded isn't the best, put it works for now
     //environment 'LD_PRELOAD', '/usr/local/Cellar/jemalloc/5.0.1/lib/libjemalloc.so.2'
     //commandLine "./test.fish"
-            // For native libraries
-    environment 'JNA_LIBRARY_PATH', "$projectDir/build/libs/backend/shared"
-
-    // Zhao Yu Li, Aug 15, 2025.
-    // For some reason, Gradle 8.0 on Windows seems to ignore applicationDefaultJvmArgs and environment 'JNA_LIBRARY_PATH'.
-    if (isWindows) jvmArgs '-Djna.library.path=./build/libs/backend/shared/'
-
-    if (isMac) {
-        environment 'DYLD_LIBRARY_PATH', "$projectDir/build/libs/backend/shared"
-        jvmArgs = [
-            '--module-path', configurations.runtimeClasspath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    }
-    else if (isLinux) {
-        environment 'LD_LIBRARY_PATH', "$projectDir/build/libs/backend/shared"
-        jvmArgs = [
-            '--module-path', '/usr/share/openjfx/lib',
-            '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    } else {
-        environment 'LD_LIBRARY_PATH', "$projectDir/build/libs/backend/shared"
-        jvmArgs = [
-            '--module-path', configurations.runtimeClasspath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    }
 }
 
 task createLibraryFolders {
